Fix footer positioning & remove z-index

--- a/packages/global/scss/components/_ad-container.scss
+++ b/packages/global/scss/components/_ad-container.scss
@@ -37,5 +37,4 @@
 
 .reveal-ad-background + .body-wrapper {
   background-image: none;
-  z-index: 1;
 }
