--- a/packages/global/scss/components/_site-footer.scss
+++ b/packages/global/scss/components/_site-footer.scss
@@ -39,3 +39,7 @@
     }
   }
 }
+
+#aha-footer {
+  position: relative;
+}
